styles/taskstyle.css
/* ... */
.add-task-container {
  display: flex;
  z-index: 20;
  height: 100vh;
  width: 100%;
  align-items: center;
  justify-content: center;
  position: absolute;
  transform: translateX(300%);
}

.top-section {
  display: flex;
}

.top-left {
  display: flex;
  flex-direction: column;
  gap: 14px;
}

.top-right {
  display: flex;
  flex-direction: column;
  gap: 14px;
}


.bottom-section {
  display: flex;
}

.bottom-left {
  display: flex;
  flex-direction: column;
  gap: 14px;
}

.bottom-right {
  display: flex;
  flex-direction: column;
  gap: 14px;
  margin-top: -50px
}

.dark-background {
  background-color: rgba(0, 0, 0, 0.4);
}



.left-dialog {
  margin-left: 0;
}

.add-task-section select {
  display: flex !important;
  justify-content: space-between !important;
  align-items: center !important;
  z-index: 999;
}


#closeAddTask {
  position: absolute;
  right: 0;
  cursor: pointer;
  top: -20px;
}

.seperator {
  margin-left: 59px;
  margin-right: 59px;
}

#description-input {
  height: 119px;
}

.dropdown button {
  display: flex !important;
  justify-content: space-between !important;
  align-items: center !important;
}

.dropdown li {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.urgent-btn {
  width: 136px;
  justify-content: center;
  align-items: center;
  gap: 10px;
  display: flex;
}

.medium-btn {
  width: 126px;
  justify-content: center;
  align-items: center;
  gap: 10px;
  display: flex;
}

.low-btn {
  width: 136px;
  justify-content: center;
  align-items: center;
  gap: 10px;
  display: flex;
}

.clear-btn {
  display: flex;
  width: 136px;
  height: 55px;
  padding: 18px 10px;
  justify-content: center;
  align-items: center;
  gap: 10px;
  border-radius: 10px;
  background-color: white;
  border: 1px solid #2a3647;
}

.clear-btn:hover {
  border-color: #29abe2;
  color: #29abe2;
}

.clear-btn:hover svg path {
  stroke: #29abe2;
}

.create-btn {
  display: flex;
  height: 55px;
  padding: 18px 15px;
  justify-content: center;
  align-items: center;
  gap: 10px;
  border-radius: 10px;
  background: #2a3647;
  color: white;
}

.create-btn:hover {
  background-color: #29abe2;
  border: #29abe2;
}

.form-btn {
  margin-top: 150px;
  margin-left: 78px;
  margin-right: 5px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 25px;
}

.category-btn {
  width: 32px;
  height: 32px;
  flex-shrink: 0;
  border-radius: 24px;
}

.custom-circle {
  width: 32px;
  height: 32px;
  flex-shrink: 0;
  border-radius: 24px;
}

.urgent-active {
  background-color: #ff3d00 !important;
  color: white;
}

.medium-active {
  background-color: #ffa800 !important;
  color: white;
}

.low-active {
  background-color: #7ae229 !important;
  color: white;
}

.category-container,
.assigned-container,
.subtasks-container {
  font-size: 20px;
  display: flex;
  justify-content: space-between;
  width: 422px;
  border-radius: 10px;
  border: 1px solid #d1d1d1;
  background: #fff;
  height: 51px;
  align-items: center;
  padding: 18px 21px;
}

.subtasks-container input {
  border: none;
}

.category-button-container button {
  background: white;
  border: none;
}

.assigned-button-container button {
  background: white;
  border: none;
}

.subtasks-button-container button {
  background: white;
  border: none;
}

.contact-item {
  padding-right: 22px;
  display: flex;
  justify-content: space-between;
  width: 415px;
  text-decoration: none;
  margin-left: -27px;
  padding-left: 18px;
  padding-top: 5px;
  padding-bottom: 8px;
  overflow-x: hidden;
}

.colorpicker {
  border: none;
  width: 18px;
  height: 18px;
  border-radius: 50%;
  border-radius: 50%;
  background-color: rgba(0, 0, 0, 0.1);
  font-size: 0px;
  margin-right: 8px;
}

.generated-Btn-Container {
  display: flex;
  align-items: center;
}

.generated-Btn-Container button {
  border: none;
  background: white;
}

.generated-subtask-container {
  display: flex;
  gap: 20px;
  padding-bottom: 5px;
  align-items: center;
}

ul {
  margin-bottom: 0rem !important;
}

.categorys {
  margin-top: -15px;
  border-bottom-right-radius: 10px;
  border-bottom-left-radius: 10px;
  background: #fff;
  border-top: none;
}

.categorys ul {
  list-style: none;
  padding: 0;
}

.category-generated-list:hover {
  background-color: lightgray;
}

.category-dropdown-items:hover {
  background-color: lightgray;
}

.category-generated-list li {
  height: 51px;
}

.category-generated-list {
  display: flex;
  align-items: center;
  width: 420px;
}

.category-li-item {
  display: flex;
  align-items: center;
  gap: 10px;
  padding-left: 22px;
}

.geneneratedSubtasks {
  max-height: 139px;
  overflow-y: auto;
  scrollbar-width: none;
}

.category-dropdown-items {
  height: 51px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.hiddenInput {
  padding: 22px 18px;
  height: 51px;
  border: none;
}

.hidden-input-container {
  margin-top: -65px;
  border: none;
  outline: none;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-radius: 10px;
}

.hidden-input-container:focus {
  outline: none;
}

.hidden-input input {
  outline: none;
}

.hidden-input input:focus {
  outline: none;
}

.remove-border {
  border-bottom-left-radius: 0px !important;
  border-bottom-right-radius: 0px !important;
  border-bottom: none !important;
}



li {
  cursor: pointer;
}

#renderCategorys {
  max-height: 150px;
  overflow-y: scroll;
}

::-webkit-scrollbar {
  width: 0px;
}

#renderContacts {
  max-height: 150px;
  overflow-y: scroll;
  overflow-x: hidden;
}

.category-dropdown-items:hover {
  background-color: lightgray;
}

.contacts {
  margin-top: -15px;
  border-bottom-right-radius: 10px;
  border-bottom-left-radius: 10px;
  border: 1px solid #d1d1d1;
  background: #fff;
  border-top: none;
  width: 422px;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}
/* ... */

